# Solidran

./: .gitignore  LICENSE  README.md  Solidran.cabal
Solidran/CONS/: Main.hs  README.md
Solidran/DNA/: Main.hs
Solidran/FIB/: Main.hs  README.md
Solidran/GC/: Main.hs  README.md  dataset.txt
Solidran/HAMM/: Main.hs  dataset.txt
Solidran/IPRB/: README.md  dataset.txt
Solidran/PROT/: Main.hs  README.md
Solidran/REVC/: Main.hs  dataset.txt
Solidran/RNA/: Main.hs  dataset.txt
Solidran/SUBS/: dataset.txt
src/: README.md
src/CONS/: Main.hs  dataset.txt
src/DNA/: README.md
src/FIB/: Main.hs  README.md
src/GC/: Main.hs
src/HAMM/: README.md
src/IPRB/: Main.hs
src/REVC/: README.md
src/SUBS/: README.md
src/Shared/: List.hs
src/Solidran/: Fasta.hs  Function.hs  List.hs  Math.hs  Output.hs  README.md
src/Solidran/CONS/: Main.hs  README.md
src/Solidran/Cons/: Detail.hs  Detail.lhs  Main.hs  README.md
src/Solidran/Dna/: Counter.hs  Detail.hs  Main.hs  Nucleo.hs  README.md  dataset.txt
src/Solidran/FIBD/: Main.hs  README.md
src/Solidran/Fib/: Detail.hs  Main.hs  README.md
src/Solidran/Fibd/: Detail.hs  Main.hs  README.md
src/Solidran/Gc/: Detail.hs  Main.hs  README.md
src/Solidran/Grph/: Detail.hs  Main.hs  README.md  dataset.txt
src/Solidran/Hamm/: Detail.hs  Main.hs
src/Solidran/Iev/: Detail.hs  Main.hs  README.md  dataset.txt
src/Solidran/Iprb/: Detail.hs  Main.hs  README.md
src/Solidran/Lexf/: Detail.hs  Main.hs  README.md  dataset.txt
src/Solidran/Mrna/: Detail.hs  Main.hs  README.md  dataset.txt
src/Solidran/PROT/: dataset.txt
src/Solidran/Perm/: Main.hs  README.md
src/Solidran/Prot/: Detail.hs  Main.hs
src/Solidran/RNA/: README.md
src/Solidran/Revc/: Detail.hs  Main.hs
src/Solidran/Revp/: Detail.hs  Main.hs  README.md  dataset.txt
src/Solidran/Rna/: Detail.hs  Main.hs
src/Solidran/Shared/: List.hs  README.md
src/Solidran/Subs/: Detail.hs  Main.hs
test/Solidran/: FastaSpec.hs  FunctionSpec.hs  ListSpec.hs  MathSpec.hs  OutputSpec.hs
test/Solidran/Cons/: DetailSpec.hs
test/Solidran/Dna/: DetailSpec.hs  NucleoSpec.hs
test/Solidran/Fib/: DetailSpec.hs
test/Solidran/Fibd/: DetailSpec.hs
test/Solidran/Gc/: DetailSpec.hs
test/Solidran/Grph/: DetailSpec.hs
test/Solidran/Hamm/: DetailSpec.hs
test/Solidran/Iev/: DetailSpec.hs
test/Solidran/Iprb/: DetailSpec.hs
test/Solidran/Lexf/: DetailSpec.hs
test/Solidran/Mrna/: DetailSpec.hs
test/Solidran/Prot/: DetailSpec.hs
test/Solidran/Revc/: DetailSpec.hs
test/Solidran/Revp/: DetailSpec.hs
test/Solidran/Rna/: DetailSpec.hs
test/Solidran/Subs/: DetailSpec.hs
test/Solidran/Test/Dna/: Main.hs
