name:               Solidran
version:            0.1.0.0
description:        Solid solutions to Rosalind problems
homepage:           https://github.com/Jefffrey/Solidran
license:            MIT
license-file:       LICENSE
author:             Jefffrey
maintainer:         notjefff@gmail.com
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

executable DNA
    main-is:                DNA/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable RNA
    main-is:                RNA/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable REVC
    main-is:                REVC/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010
    
executable FIB
    main-is:                FIB/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable GC
    main-is:                GC/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        text >= 1.1 && < 1.2
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable HAMM
    main-is:                HAMM/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable IPRB
    main-is:                IPRB/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        containers >= 0.5 && < 0.6,
        mtl >= 2.2 && < 2.3
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable PROT
    main-is:                PROT/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        containers >= 0.5 && < 0.6
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable SUBS
    main-is:                SUBS/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable CONS
    main-is:                CONS/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7, 
        containers >= 0.5 && < 0.6
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable FIBD
    main-is:                FIBD/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        vector >= 0.10 && < 0.11,
        mtl >= 2.2 && < 2.3
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010
