name:               Solidran
version:            0.1.0.0
description:        Solid solutions to Rosalind problems
homepage:           https://github.com/Jefffrey/Solidran
license:            MIT
license-file:       LICENSE
author:             Jefffrey
maintainer:         notjefff@gmail.com
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

executable Dna
    main-is:                Solidran/Dna/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        containers >= 0.5 && < 0.6
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Rna
    main-is:                Solidran/Rna/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Revc
    main-is:                Solidran/Revc/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010
    
executable Fib
    main-is:                Solidran/Fib/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Gc
    main-is:                Solidran/Gc/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        text >= 1.1 && < 1.2,
        containers >= 0.5 && < 0.6
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Hamm
    main-is:                Solidran/Hamm/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Iprb
    main-is:                Solidran/Iprb/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        containers >= 0.5 && < 0.6,
        mtl >= 2.2 && < 2.3
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Prot
    main-is:                Solidran/Prot/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        containers >= 0.5 && < 0.6
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Subs
    main-is:                Solidran/Subs/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        containers >= 0.5 && < 0.6
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Cons
    main-is:                Solidran/Cons/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7, 
        containers >= 0.5 && < 0.6
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Fibd
    main-is:                Solidran/Fibd/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        vector >= 0.10 && < 0.11,
        mtl >= 2.2 && < 2.3
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Grph
    main-is:                Solidran/Grph/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7,
        containers >= 0.5 && < 0.6
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Iev
    main-is:                Solidran/Iev/Main.hs              
    build-depends:       
        base >= 4.6 && < 4.7
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

Test-Suite test-solidran
    type:                   exitcode-stdio-1.0
    hs-source-dirs:         test, src
    main-is:                Spec.hs
    build-depends:
        base >= 4.6 && < 4.7,
        hspec >= 1.10 && < 1.11,
        containers >= 0.5 && < 0.6,
        vector >= 0.10 && < 0.11,
        mtl >= 2.2 && < 2.3
    default-language:       Haskell2010
