name:               Solidran
version:            0.1.0.0
description:        Solid solutions to Rosalind problems
homepage:           https://github.com/Jefffrey/Solidran
license:            MIT
license-file:       LICENSE
author:             Jefffrey
maintainer:         notjefff@gmail.com
build-type:         Simple
extra-source-files: README.md
cabal-version:      >= 1.10

executable Dna
    main-is:                Solidran/Dna/Main.hs              
    build-depends:       
        base,
        containers
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Rna
    main-is:                Solidran/Rna/Main.hs              
    build-depends:       
        base
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Revc
    main-is:                Solidran/Revc/Main.hs              
    build-depends:       
        base
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010
    
executable Fib
    main-is:                Solidran/Fib/Main.hs              
    build-depends:       
        base
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Gc
    main-is:                Solidran/Gc/Main.hs              
    build-depends:       
        base,
        text,
        containers
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Hamm
    main-is:                Solidran/Hamm/Main.hs              
    build-depends:       
        base
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Iprb
    main-is:                Solidran/Iprb/Main.hs              
    build-depends:       
        base,
        containers,
        mtl
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Prot
    main-is:                Solidran/Prot/Main.hs              
    build-depends:       
        base,
        containers
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Subs
    main-is:                Solidran/Subs/Main.hs              
    build-depends:       
        base,
        containers
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Cons
    main-is:                Solidran/Cons/Main.hs              
    build-depends:       
        base,
        containers
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Fibd
    main-is:                Solidran/Fibd/Main.hs              
    build-depends:       
        base,
        vector,
        mtl
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Grph
    main-is:                Solidran/Grph/Main.hs              
    build-depends:       
        base,
        containers
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Iev
    main-is:                Solidran/Iev/Main.hs              
    build-depends:       
        base
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Mrna
    main-is:                Solidran/Mrna/Main.hs              
    build-depends:       
        base
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Perm
    main-is:                Solidran/Perm/Main.hs              
    build-depends:       
        base,
        containers
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Lexf
    main-is:                Solidran/Lexf/Main.hs              
    build-depends:       
        base
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

executable Revp
    main-is:                Solidran/Revp/Main.hs              
    build-depends:       
        base,
        containers
    hs-source-dirs:         src
    ghc-options:            -Wall -O2
    default-language:       Haskell2010

Test-Suite test-solidran
    type:                   exitcode-stdio-1.0
    hs-source-dirs:         test, src
    main-is:                Spec.hs
    build-depends:
        base,
        hspec,
        containers,
        vector,
        mtl
    default-language:       Haskell2010
